@@ -32,9 +32,9 @@
               style: 'background-color: #fff2f0'
             }, 'task_related_data_tab_container');
 
-            var bookings_content_pane = new ContentPane({
-              title: 'Bookings',
-              href: 'list/bookings/{{ task.id }}'
+            var time_logs_content_pane = new ContentPane({
+              title: 'TimeLogs',
+              href: 'list/time_logs/{{ task.id }}'
             });
 
             var versions_content_pane = new ContentPane({
@@ -49,7 +49,7 @@
 
 
 
-            task_related_data_tab_container.addChild(bookings_content_pane);
+            task_related_data_tab_container.addChild(time_logs_content_pane);
             task_related_data_tab_container.addChild(versions_content_pane);
             task_related_data_tab_container.addChild(tickets_content_pane);
             task_related_data_tab_container.startup();
